--- a/01-azure-pipeline.yml
+++ b/01-azure-pipeline.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
+- script: echo Hello, java application!
   displayName: 'Run a one-line script'
 
 - script: |
