--- a/01-azure-pipelines.yml
+++ b/01-azure-pipelines.yml
@@ -17,3 +17,6 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script and modified pipeline'
+- script: echo Azure devOps!
+  displayName: 'This is basic YAML pipeline'
+
